removed dev data from config file.

--- a/SignatureReportDemo/app.config
+++ b/SignatureReportDemo/app.config
@@ -1,11 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <!--add key="APIUrl" value="https://dev.daxko.com/"/>
+    <add key="APIUrl" value="https://dev.daxko.com/"/>
     <add key="APIUsername" value="YourUserName"/>
-    <add key="APIPassword" value="YourPassword"/-->
-    <add key="APIUrl" value="http://localhost:8081/v1/"/>
-    <add key="APIUsername" value="jhuggart"/>
-    <add key="APIPassword" value="Daxko123"/>
+    <add key="APIPassword" value="YourPassword"/>
   </appSettings>
 </configuration>
